change org to markdown, update the file name and content

--- a/post/broadcast-multicast.org
+++ b/post/broadcast-multicast.org
@@ -1,6 +1,6 @@
 #+TITLE: IP地址相关以及广播和组播的区别
 #+DATE: <2017-02-22 三>
-#+TAGS: IP address, broadcast, multicast
+#+TAGS: broadcast, multicast
 #+LAYOUT: post
 #+CATEGORIES: Net
 
@@ -17,7 +17,7 @@
 | D    |   1110 |  224-239 |      / |      / |                           / |
 | E    |   1111 |  240-255 |      / |      / |                           / |
 
-*备注：* A类网络中网络数减去2，原因为0和127开头的地址作为保留地址块，具体会在后面介绍。主机数减2是由于计算时需要除去全’'0'和和全'原因下面介绍）
+*备注：* A类网络中网络数减去2，原因为0和127开头的地址作为保留地址块，具体会在后面介绍。主机数减2是由于计算时需要除去全'0'和全'1'，原因下面介绍）
 
 #+BEGIN_HTML
 <!--more-->
@@ -31,7 +31,7 @@
 | 10.0.0.0/8      | 专用网络                     |
 | 100.64.0.0/10   | 地址共享                     |
 | 127.0.0.0/8     | 环回                         |
-| 169.254.0.0/16  | 链路本地                     |
+| 169.254.0.0/16  | 本地链路                     |
 | 172.16.0.0/12   | 专用网络                     |
 | 192.0.0.0/24    | 保留（IANA）                 |
 | 192.0.2.0/24    | TEST-NET-1，文档和示例       |
@@ -43,8 +43,6 @@
 | 224.0.0.0/4     | 多播（之前的D类网络）        |
 | 240.0.0.0/4     | 保留（之前的E类网络）        |
 | 255.255.255.255 | 广播                         |
-
-*注意：无类别域间路由（Classless Inter-Domain Routing、CIDR）是一个用于给用户分配IP地址以及在互联网上有效地路由IP数据包的对IP地址进行归类的方法。*
 
 
 ** 一些特殊的IP地址表
