--- a/post/switch-config-2.org
+++ b/post/switch-config-2.org
@@ -1,8 +1,8 @@
-#+TITLE: 交换机配置2——单交换机VLAN划分
+#+TITLE: 思科交换机配置2——单交换机VLAN划分
 #+DATE: <2017-03-05 周日>
 #+TAGS: VLAN, switch
 #+LAYOUT: post
-#+CATEGORIES: Switch
+#+CATEGORIES: Net
 
 
 * 单交换机VLAN配置
@@ -15,8 +15,8 @@
 |------+-----------------+----------+----------+-------------------|
 | PC1  | 192.168.1.11/24 | VLAN10   | f0/1     | 192.168.1.254/24  |
 | PC2  | 192.168.1.12/24 | VLAN10   | f0/2     | 192.168.1.254/24  |
-| PC3  | 192.168.2.11/24 | VLAN20   | f0/11    | 192.168.2.254./24 |
-| PC4  | 192.168.2.12/24 | VLAN20   | f0/12    |                   |
+| PC3  | 192.168.2.11/24 | VLAN20   | f0/11    | 192.168.2.254/24 |
+| PC4  | 192.168.2.12/24 | VLAN20   | f0/12    | 192.168.2.254/24  |
 
 #+BEGIN_HTML
 <!--more-->
