--- a/post/switch-config-5.org
+++ b/post/switch-config-5.org
@@ -1,8 +1,8 @@
-#+TITLE: 交换机配置5——链路聚合
+#+TITLE: 思科交换机配置5——链路聚合
 #+DATE: <2017-03-18 周六>
-#+TAGS: 链路聚合, 二层, 三层
+#+TAGS: 链路聚合, 三层
 #+LAYOUT: post
-#+CATEGORIES: Switch
+#+CATEGORIES: Net
 
 
 *这个配置一定使用6.0以上的版本，我使用5.3的版本可以聚合成功，但是当链路只剩一条时显示绿色，却无法通信，浪费了很多时间。*
