--- a/post/github-access-fast.org
+++ b/post/github-access-fast.org
@@ -1,13 +1,14 @@
-#+TITLE: 加快国内访问Github速度
+#+TITLE: 加快国内访问Github网站的速度
 #+DATE: <2018-05-12 Sat>
 #+TAGS: github, fast
 #+LAYOUT: post
-#+CATEGORIES: Github
-
+#+CATEGORIES: Net
 
 有时候查看一些开源的项目和代码都会访问Github，自己的博客也在Page上，不过访问总是比较慢，原因不用说大家都知道，不过幸亏是还能访问，所以感觉已经挺知足了。
 
 但是慢点没关系，你不能最后样式都加载不出来吧，这有点过分了，所以搜索了一下解决方法，确实挺有效，记录如下。
+
+*2018-06-13更新：这种方法在家庭宽带的作用还是蛮大的，但是在非独立宽带如机房环境中可能没有效果。*
 
 方法简单说就是在本地 =hosts= 文件中加入 =github.com= 的网站IP，绕过DNS解析。
 
@@ -43,5 +44,6 @@
 5. 使用浏览器访问Github检验你的成果
 
 *参考博客*
+
 - [[https://blog.csdn.net/sunsteam/article/details/63253933][Github访问慢解决办法]]
 - [[https://www.jianshu.com/p/40d48340a6b2][解决github访问慢方案]]
