--- a/post/router-config-2.org
+++ b/post/router-config-2.org
@@ -1,8 +1,8 @@
-#+TITLE: 路由器配置2——单臂路由
+#+TITLE: 思科路由器配置2——单臂路由
 #+DATE: <2017-04-17 Mon>
-#+TAGS: 单臂路由, router
+#+TAGS: router, one-armed
 #+LAYOUT: post
-#+CATEGORIES: Router
+#+CATEGORIES: Net
 
 [[http://baike.baidu.com/item/%E5%8D%95%E8%87%82%E8%B7%AF%E7%94%B1][单臂路由]]:是指在路由器的一个接口上通过配置子接口（或“逻辑接口”，并不存在真正物理接口）的方式，实现原来相互隔离的不同VLAN（虚拟局域网）之间的互联互通。
 
@@ -39,13 +39,11 @@ S0(config)#inter f0/24		// 设置与路由器R0连接的端口24
 // 这里由于交换机只支持802.1q协议，所以没有设置协议，只设置模式
 S0(config-if)#swi mode trunk 
 S0(config-if)#swi trunk allowed vlan all	// 允许所有vlan通过
-
-
 #+END_SRC
 
 * PC的设置
 
-|     | vlan | IP              | gateway          |
+| PC  | vlan | IP              | gateway          |
 |-----+------+-----------------+------------------|
 | PC0 |   10 | 192.168.1.11/24 | 192.168.1.254/24 |
 | PC1 |   20 | 192.168.2.11/24 | 192.168.2.254/24 |
