--- a/post/switch-config-4.org
+++ b/post/switch-config-4.org
@@ -1,8 +1,8 @@
-#+TITLE: 交换机配置4——三层交换机VLAN联通
+#+TITLE: 思科交换机配置4——三层交换机VLAN联通
 #+DATE: <2017-03-08 周三>
-#+TAGS: 三层交换机, vlan, 链路聚合
+#+TAGS: 三层交换机, 链路聚合
 #+LAYOUT: post
-#+CATEGORIES: Switch
+#+CATEGORIES: Net
 
 *三层和二层交换机的链路聚合没有成功。可以通信，但聚合链路中拿走一条链路后则通信中断，这个是PT5.3版本的坑！！*
 
